# This file is part of t8code
# Non-recursive Makefile.am in example/EarthSystemModel
# Included from toplevel directory

bin_PROGRAMS += \
	example/EarthSystemModel/t8_read_reanalysis_data \
	example/EarthSystemModel/t8_latlon_refine

example_EarthSystemModel_t8_read_reanalysis_data_SOURCES = \
	example/EarthSystemModel/t8_read_reanalysis_data.cxx
example_EarthSystemModel_t8_latlon_refine_SOURCES = \
	example/EarthSystemModel/t8_latlon_refine.cxx
