# This file is part of t8code
# Non-recursive Makefile.am in example/IO
# Included from toplevel directory

bin_PROGRAMS += \
  example/IO/cmesh/t8_cmesh_load_save


example_IO_cmesh_t8_cmesh_load_save_SOURCES = example/IO/cmesh/t8_cmesh_load_save.cxx

include example/IO/cmesh/gmsh/Makefile.am
include example/IO/cmesh/tetgen/Makefile.am
include example/IO/cmesh/triangle/Makefile.am
include example/IO/cmesh/netcdf/Makefile.am
include example/IO/cmesh/vtk/Makefile.am
include example/IO/forest/netcdf/Makefile.am
include example/IO/netcdf_input/Makefile.am
include example/IO/forest/gmsh/Makefile.am
