# This file is part of t8code
# Non-recursive Makefile.am in example/basic
# Included from toplevel directory

bin_PROGRAMS += \
	example/basic/t8_basic \
        example/basic/t8_basic_hcube \
        example/basic/t8_basic_hybrid

example_basic_t8_basic_SOURCES = \
	example/basic/basic.cxx \
	example/common/t8_example_common.cxx 
example_basic_t8_basic_hcube_SOURCES = example/basic/basic_hcube.cxx
example_basic_t8_basic_hybrid_SOURCES = example/basic/basic_hybrid.cxx
