# This file is part of t8code
# Non-recursive Makefile.am in example/cmesh
# Included from toplevel directory

#bin_PROGRAMS += \
  example/cmesh/t8_cmesh_partition \
  example/cmesh/t8_cmesh_refine \
  example/cmesh/t8_cmesh_load_save \
  example/cmesh/t8_cmesh_create_partitioned

example_cmesh_t8_cmesh_partition_SOURCES = example/cmesh/t8_cmesh_partition.cxx
example_cmesh_t8_cmesh_refine_SOURCES = example/cmesh/t8_cmesh_refine.cxx
example_cmesh_t8_cmesh_load_save_SOURCES = example/cmesh/t8_cmesh_load_save.cxx
example_cmesh_t8_cmesh_create_partitioned_SOURCES = example/cmesh/t8_cmesh_create_partitioned.cxx
