# This file is part of t8code
# Non-recursive Makefile.am in example/cmesh
# Included from toplevel directory

bin_PROGRAMS += \
  example/cmesh/t8_cmesh_partition \
  example/cmesh/t8_cmesh_create_partitioned \
  example/cmesh/t8_cmesh_set_join_by_vertices \
  example/cmesh/t8_cmesh_geometry_examples \
  example/cmesh/t8_cmesh_hypercube_pad

example_cmesh_t8_cmesh_partition_SOURCES = example/cmesh/t8_cmesh_partition.cxx
example_cmesh_t8_cmesh_set_join_by_vertices_SOURCES = example/cmesh/t8_cmesh_set_join_by_vertices.cxx
example_cmesh_t8_cmesh_geometry_examples_SOURCES = example/cmesh/t8_cmesh_geometry_examples.cxx
example_cmesh_t8_cmesh_create_partitioned_SOURCES = example/cmesh/t8_cmesh_create_partitioned.cxx
example_cmesh_t8_cmesh_hypercube_pad_SOURCES = example/cmesh/t8_cmesh_hypercube_pad.cxx
