# This file is part of t8code
# Non-recursive Makefile.am in example/forest
# Included from toplevel directory

bin_PROGRAMS += \
	example/forest/t8_test_ghost \
	example/forest/t8_test_face_iterate \
	example/forest/t8_test_ghost_large_level_diff

example_forest_t8_test_ghost_SOURCES = example/forest/t8_test_ghost.cxx
example_forest_t8_test_face_iterate_SOURCES = example/forest/t8_test_face_iterate.cxx
example_forest_t8_test_ghost_large_level_diff_SOURCES = example/forest/t8_test_ghost_large_level_diff.cxx
