# This file is part of t8code
# Non-recursive Makefile.am in example/geometry
# Included from toplevel directory

bin_PROGRAMS += \
	example/geometry/t8_example_geometries \
	example/geometry/t8_christmas_card

example_geometry_t8_example_geometries_SOURCES = \
	example/geometry/t8_example_geometries.cxx

example_geometry_t8_christmas_card_SOURCES = \
	example/geometry/t8_christmas_card.cxx
