# This file is part of t8code
# Non-recursive Makefile.am in example/basic
# Included from toplevel directory

bin_PROGRAMS += \
	example/ghost/t8_face_neighbor \
	example/ghost/t8_test_ghost \
	example/ghost/t8_test_face_iterate

example_ghost_t8_face_neighbor_SOURCES = example/ghost/t8_face_neighbor.cxx
example_ghost_t8_test_ghost_SOURCES = example/ghost/t8_test_ghost.cxx
example_ghost_t8_test_face_iterate_SOURCES = example/ghost/t8_test_face_iterate.cxx
