# This file is part of t8code
# Non-recursive Makefile.am in example/gmsh
# Included from toplevel directory

bin_PROGRAMS += \
	example/gmsh/t8_read_msh_file \
  example/gmsh/t8_load_and_refine_square_w_hole

dist_t8data_DATA += \
  example/gmsh/circlesquare_hybrid_hole.msh

example_gmsh_t8_read_msh_file_SOURCES = example/gmsh/t8_read_msh_file.cxx
example_gmsh_t8_load_and_refine_square_w_hole_SOURCES = example/gmsh/t8_load_and_refine_square_w_hole.cxx
