# This file is part of t8code
# Non-recursive Makefile.am in example/mptrac
# Included from toplevel directory

bin_PROGRAMS += \
	example/mptrac/t8_mptrac_helloworld

example_mptrac_t8_mptrac_helloworld_SOURCES = \
	example/mptrac/t8_mptrac_helloworld.cxx

example_mptrac_t8_mptrac_helloworld_LDADD = $(LDADD) thirdparty/mptrac/libt8mptrac.la

