# This file is part of t8code
# Non-recursive Makefile.am in example/basic
# Included from toplevel directory

bin_PROGRAMS += \
	example/remove/t8_example_ring \
	example/remove/t8_example_balls \
	example/remove/t8_example_moving_circle

example_remove_t8_example_ring_SOURCES = \
	example/remove/t8_example_ring.cxx

example_remove_t8_example_balls_SOURCES = \
	example/remove/t8_example_balls.cxx

example_remove_t8_example_moving_circle_SOURCES = \
	example/remove/t8_example_moving_circle.cxx