# This file is part of t8code
# Non-recursive Makefile.am in example/basic
# Included from toplevel directory

bin_PROGRAMS += \
	example/remove/t8_example_ring \
	example/remove/t8_example_spheres \
	example/remove/t8_example_moving_circle

example_remove_t8_example_ring_SOURCES = \
	example/remove/t8_example_ring.cxx

example_remove_t8_example_spheres_SOURCES = \
	example/remove/t8_example_spheres.cxx

example_remove_t8_example_moving_circle_SOURCES = \
	example/remove/t8_example_moving_circle.cxx