# This file is part of t8code
# Non-recursive Makefile.am in example/basic
# Included from toplevel directory

bin_PROGRAMS += \
	example/remove/t8_example_spheres \
	example/remove/t8_example_gauss_blob

example_remove_t8_example_spheres_SOURCES = \
	example/remove/t8_example_spheres.cxx

example_remove_t8_example_gauss_blob_SOURCES = \
	example/remove/t8_example_gauss_blob.cxx