# This file is part of t8code
# Non-recursive Makefile.am in example/advect
# Included from toplevel directory

bin_PROGRAMS += \
	example/steps/t8_step0 \
	example/steps/t8_step1 \
	example/steps/t8_step2

example_steps_t8_step0_SOURCES = \
	example/steps/t8_step0.c
example_steps_t8_step1_SOURCES = \
	example/steps/t8_step1.c
example_steps_t8_step2_SOURCES = \
	example/steps/t8_step2.cxx

